--- a/README
+++ b/README
@@ -4,4 +4,13 @@
 
 'de witte dood' 
 
+# style
+https://en.wikipedia.org/wiki/Design
+
+# genocide
+https://en.wikipedia.org/wiki/Genocide
+
+# rotterdam
+https://en.wikipedia.org/wiki/Rotterdam
+
 dwangmedicatie at work
