--- a/README
+++ b/README
@@ -14,4 +14,13 @@ https://en.wikipedia.org/wiki/Genocide
 # rotterdam
 https://en.wikipedia.org/wiki/Rotterdam
 
+# gaper
+https://en.wikipedia.org/wiki/Gaper
+
+# pharmacist
+https://en.wikipedia.org/wiki/Pharmacist
+
+# chemical weapons
+https://en.wikipedia.org/wiki/Chemical_weapons_in_World_War_I
+
 bemoeigurus at work
