--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 | doctor-robins-wonder-medicijn |
 ---------------------------------
 
-'het boegbeeld, de witte dood' 
+'het boegbeeld van de witte dood' 
 
 
 # design
